# django-pydantic-field

./: .editorconfig  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: python-publish.yml  python-test.yml
django_pydantic_field/: __init__.py  _migration_serializers.py  _migration_serializers_tests.py  base.py  field.py  fields.py  fields.pyi  form.py  forms.py  forms.pyi  rest_framework.py  rest_framework.pyi  serialization.py  type_utils.py  types.py  utils.py
django_pydantic_field/compat/: __init__.py  deprecation.py  django.py  functools.py  imports.py  pydantic.py
django_pydantic_field/v1/: __init__.py  base.py  fields.py  forms.py  rest_framework.py  types.py  utils.py
django_pydantic_field/v2/: __init__.py  fields.py  forms.py  lookups.py  rest_framework.py  types.py  utils.py
django_pydantic_field/v2/rest_framework/: __init__.py  coreapi.py  fields.py  mixins.py  openapi.py
src/django_pydantic_field/: __init__.py  fields.py  fields.pyi  forms.py  rest_framework.pyi  types.py
src/django_pydantic_field/_internal/: _annotation_utils.py
src/django_pydantic_field/compat/: __init__.py  deprecation.py  django.py  imports.py  pydantic.py  typing.py
src/django_pydantic_field/v1/: __init__.py  compat.py  fields.py  fields.pyi  forms.py  rest_framework.py  schema_utils.py  types.py
src/django_pydantic_field/v2/: __init__.py  fields.py  fields.pyi  forms.py  types.py
src/django_pydantic_field/v2/rest_framework/: __init__.py  fields.py  openapi.py  parsers.py  renderers.py
tests/: conftest.py  linter_assertions.py  test_base_marshalling.py  test_deferred_defaults.py  test_django_model_field.py  test_drf_adapters.py  test_e2e_models.py  test_fields.py  test_form_field.py  test_imports.py  test_migration_serializers.py  test_model_admin.py  test_sample_app_migrations.py
tests/sample_app/: apps.py  dbrouters.py  models.py
tests/sample_app/migrations/: .gitignore  0001_initial.py
tests/settings/: django_test_settings.py
tests/test_app/: admin.py  models.py
tests/test_app/migrations/: 0001_initial.py  0002_examplemodel.py  0003_samplemodel_sample_null_root_schema_and_more.py  0003_samplemodelwithroot.py
tests/v1/: schema.py  test_base.py  test_fields.py  test_forms.py  test_rest_framework.py  test_schema_utils.py
tests/v2/: test_fields.py  test_forms.py  test_rest_framework.py  test_types.py
tests/v2/rest_framework/: test_coreapi.py  test_e2e_views.py  test_fields.py  test_openapi.py  test_parsers.py  test_renderers.py  view_fixtures.py
tests/v2/rest_framework/__snapshots__/test_openapi/: test_openapi_schema_generators[GET-func].json
