[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"

[project]
name = "django-pydantic-field"
version = "0.4.1"
requires-python = ">=3.10"
description = "Django JSONField with Pydantic models as a Schema"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Savva Surenkov", email = "savva@surenkov.space" },
]

keywords = ["django", "pydantic", "json", "schema"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Framework :: Django",
    "Framework :: Django :: 3",
    "Framework :: Django :: 3.1",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 4.1",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Framework :: Django :: 5.2",
    "Framework :: Django :: 6.0",
    "Framework :: Pydantic",
    "Framework :: Pydantic :: 1",
    "Framework :: Pydantic :: 2",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

dependencies = [
    "pydantic>=1.10,<3",
    "django>=3.1",
    "typing_extensions",
]

[project.optional-dependencies]
openapi = ["uritemplate", "inflection"]
coreapi = ["coreapi"]
jsonform = ["django_jsonform>=2.0,<3"]

[dependency-groups]
dev = [
    "ruff",
    "ty",
    "pre-commit",
    "pytest~=7.4",
    "djangorestframework>=3.11,<4",
    "django-stubs~=5.2.3",
    "djangorestframework-stubs~=3.16.3",
    "pytest-django>=4.5,<6",
]
test = [
    "django_pydantic_field[openapi,coreapi,jsonform]",
    "dj-database-url~=2.0",
    "djangorestframework>=3,<4",
    "pyyaml",
    "syrupy>=3,<5",
]
ci = [
    "psycopg[binary]>=3.1,<4",
    "mysqlclient>=2.1",
]

[project.urls]
Homepage = "https://github.com/surenkov/django-pydantic-field"
Documentation = "https://github.com/surenkov/django-pydantic-field"
Source = "https://github.com/surenkov/django-pydantic-field"
Changelog = "https://github.com/surenkov/django-pydantic-field/releases"

[tool.uv]
default-groups = ["dev", "test"]

[tool.uv.build-backend]
module-name = "django_pydantic_field"
module-root = ""

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

[tool.ruff]
line-length = 120

[tool.ty.src]
include = ["django_pydantic_field"]
exclude = ["tests"]

[tool.ty.rules]
possibly-unresolved-reference = "ignore"
possibly-missing-attribute = "ignore"

[tool.django-stubs]
django_settings_module = "tests.settings.django_test_settings"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings.django_test_settings"

addopts = "--capture=no"
pythonpath = ["."]
testpaths = ["tests"]
python_files = ["test_*.py", "*_tests.py"]
norecursedirs = [".*", "venv"]
