[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"

[project]
name = "django-pydantic-field"
version = "0.5.2"
requires-python = ">=3.10"
description = "Type-Safe Pydantic Schemas for Django JSONFields"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Savva Surenkov", email = "savva@surenkov.space" },
]

keywords = ["django", "pydantic", "json", "schema"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Framework :: Django",
    "Framework :: Django :: 3",
    "Framework :: Django :: 3.1",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 4.1",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Framework :: Django :: 5.2",
    "Framework :: Django :: 6.0",
    "Framework :: Pydantic",
    "Framework :: Pydantic :: 1",
    "Framework :: Pydantic :: 2",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

dependencies = [
    "pydantic>=1.10,<3",
    "django>=3.1",
    "typing_extensions",
]

[project.optional-dependencies]
openapi = ["uritemplate", "inflection"]
jsonform = ["django_jsonform>=2.0,<3"]

[dependency-groups]
dev = [
    "ruff",
    "ty",
    "pre-commit",
    "uritemplate",
    "inflection",
    "pytest>=9",
    "pytest-django>=4.5",
    "django-stubs>=5",
    "djangorestframework>=3,<4",
    "djangorestframework-stubs>=3",
    "django_jsonform>=2.0,<3",
    "dj-database-url~=2.0",
    "pyyaml",
    "syrupy",
    "annotated-types>=0.7.0",
]
ci = [
    "psycopg[binary]>=3.1,<4",
    "mysqlclient>=2.1",
]

[project.urls]
Homepage = "https://github.com/surenkov/django-pydantic-field"
Documentation = "https://github.com/surenkov/django-pydantic-field"
Source = "https://github.com/surenkov/django-pydantic-field"
Changelog = "https://github.com/surenkov/django-pydantic-field/releases"

[tool.uv]
default-groups = ["dev"]

[tool.uv.build-backend]
module-name = "django_pydantic_field"
module-root = "src"

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

[tool.ruff]
line-length = 120

[tool.ty.src]
include = [
    "src",
    "tests/test_app",
    "tests/sample_app",
    "tests/linter_assertions.py",
]

[tool.ty.rules]
possibly-unresolved-reference = "ignore"
possibly-missing-attribute = "ignore"

[tool.django-stubs]
django_settings_module = "tests.settings.django_test_settings"

[tool.pytest.ini_options]
strict = true
strict_parametrization_ids = false

addopts = "--import-mode=importlib --capture=no"
pythonpath = ["."]
testpaths = ["tests"]
python_files = ["test_*.py", "*_tests.py"]
norecursedirs = [".*", "venv"]
DJANGO_SETTINGS_MODULE = "tests.settings.django_test_settings"
