[metadata]
name = django-pydantic-field
version = 0.1.4
url = https://github.com/surenkov/django-pydantic-field

description = Django JSONField with Pydantic models as a Schema
long_description = file: README.md
long_description_content_type = text/markdown

author = Savva Surenkov
author_email = savva@surenkov.space
license_files =
    LICENSE

keywords = django, pydantic, json, schema
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Framework :: Django
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
python_requires = >= 3.8
packages = django_pydantic_field
install_requires =
    pydantic>=1.9,<2
    django>=4.0,<5

[options.extras_require]
rest =
     djangorestframework>=3,<4
     pyyaml

dev =
    black
    mypy==0.961
    flake8==4.0.*
    pytest==7.0.*
    djangorestframework>=3.13,<4
    django-stubs[compatible-mypy]
    djangorestframework-stubs[compatible-mypy]
    pytest-django>=4.5,<5
