[metadata]
name = django-pydantic-field
version = 0.2.2
url = https://github.com/surenkov/django-pydantic-field

description = Django JSONField with Pydantic models as a Schema
long_description = file: README.md
long_description_content_type = text/markdown

author = Savva Surenkov
author_email = savva@surenkov.space
license_files =
    LICENSE

keywords = django, pydantic, json, schema
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Framework :: Django
    Framework :: Django :: 3
    Framework :: Django :: 3.1
    Framework :: Django :: 3.2
    Framework :: Django :: 4
    Framework :: Django :: 4.0
    Framework :: Django :: 4.1
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
python_requires = >= 3.7
packages = django_pydantic_field
install_requires =
    pydantic>=1.9,<2
    django>=3.1,<5
    typing_extensions

[options.extras_require]
rest =
     djangorestframework>=3,<4
     pyyaml

dev =
    black
    isort
    mypy
    pytest==7.0.*
    djangorestframework>=3.11,<4
    django-stubs[compatible-mypy]~=1.12.0
    djangorestframework-stubs[compatible-mypy]~=1.7.0
    pytest-django>=4.5,<5
